`juan-jaramillo-ai-consulting-services` Website 0.1 Beta

--- a/src/pages/components/accordion.mdx
+++ b/src/pages/components/accordion.mdx
@@ -91,7 +91,7 @@ draft: false
             </ul>
           </div>
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-          <img class="rounded-xl my-8" src="/public/images/services/services-4.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 04. Predictive Analytics and Forecasting" />
+          <img class="rounded-xl my-8" src="https://media.myparcero.com/services-4.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 04. Predictive Analytics and Forecasting" />
             <h2 class="text-xl lg:text-3xl leading-6">Use Case</h2>
             <p class="mt-4 text-md leading-6">
               We developed a predictive analytics model for a retail chain, improving inventory management and reducing stock outs by 35%, while increasing overall sales by 20%.
@@ -115,7 +115,7 @@ draft: false
             </ul>
           </div>
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-          <img class="rounded-xl my-8" src="/public/images/services/services-5.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 05. Process Automation with AI" />
+          <img class="rounded-xl my-8" src="https://media.myparcero.com/services-5.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 05. Process Automation with AI" />
             <h2 class="text-xl lg:text-3xl leading-6">Use Case</h2>
             <p class="mt-4 text-md leading-6">
               For a logistics company, we implemented an AI-driven process automation system, reducing order processing time by 70% and minimizing errors by 90%.
@@ -139,7 +139,7 @@ draft: false
             </ul>
           </div>
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-          <img class="rounded-xl my-8" src="/public/images/services/services-6.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 06. Personalization Engines" />
+          <img class="rounded-xl my-8" src="https://media.myparcero.com/services-6.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 06. Personalization Engines" />
             <h2 class="text-xl lg:text-3xl leading-6">Use Case</h2>
             <p class="mt-4 text-md leading-6">
               We developed a personalization engine for a streaming service, resulting in a 50% increase in user engagement and a 40% reduction in churn rate.
@@ -163,7 +163,7 @@ draft: false
             </ul>
           </div>
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-          <img class="rounded-xl my-8" src="/public/images/services/services-7.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 07. AI-Assisted Design and Creative Tools" />
+          <img class="rounded-xl my-8" src="https://media.myparcero.com/services-7.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 07. AI-Assisted Design and Creative Tools" />
             <h2 class="text-xl lg:text-3xl leading-6">Use Case</h2>
             <p class="mt-4 text-md leading-6">
               For a marketing agency, we implemented AI-assisted design tools that increased creative output by 200% and reduced design iteration time by 60%.
@@ -187,7 +187,7 @@ draft: false
             </ul>
           </div>
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-          <img class="rounded-xl my-8" src="/public/images/services/services-8.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 08. Data Augmentation and Synthetic Data Generation" />
+          <img class="rounded-xl my-8" src="https://media.myparcero.com/services-8.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 08. Data Augmentation and Synthetic Data Generation" />
             <h2 class="text-xl lg:text-3xl leading-6">Use Case</h2>
             <p class="mt-4 text-md leading-6">
               For a healthcare AI project, we used synthetic data generation to create a diverse dataset of medical images, improving diagnostic accuracy by 25% while maintaining patient privacy.
@@ -211,7 +211,7 @@ draft: false
             </ul>
           </div>
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-          <img class="rounded-xl my-8" src="/public/images/services/services-9.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 09. AI Model Fine-tuning and Optimization" />
+          <img class="rounded-xl my-8" src="https://media.myparcero.com/services-9.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 09. AI Model Fine-tuning and Optimization" />
             <h2 class="text-xl lg:text-3xl leading-6">Use Case</h2>
             <p class="mt-4 text-md leading-6">
               We fine-tuned a large language model for a legal tech company, improving contract analysis accuracy by 40% and reducing processing time by 60%.
@@ -235,7 +235,7 @@ draft: false
             </ul>
           </div>
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-          <img class="rounded-xl my-8" src="/public/images/services/services-10.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 10. Ethical AI and Governance" />
+          <img class="rounded-xl my-8" src="https://media.myparcero.com/services-10.webp" width="600" height="100%" alt="Juan Jaramillo AI Consulting Services 10. Ethical AI and Governance" />
             <h2 class="text-xl lg:text-3xl leading-6">Use Case</h2>
             <p class="mt-4 text-md leading-6">
               We developed an ethical AI governance framework for a financial institution, ensuring fair lending practices and improving regulatory compliance while maintaining high performance in credit risk assessment.
